--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-# MONGODB_URL=mongodb://localhost:27017/findr
-MONGODB_URL=mongodb+srv://aditya2955singh:CCLW6AlusboeNYmv@findr.8oy7t6s.mongodb.net/?retryWrites=true&w=majority&appName=Findr
+MONGODB_URL=mongodb://localhost:27017/findr
+# MONGODB_URL=mongodb+srv://aditya2955singh:CCLW6AlusboeNYmv@findr.8oy7t6s.mongodb.net/?retryWrites=true&w=majority&appName=Findr
 PORT=4000
 JWT_SECRET= FindrJobPortal
 CLOUDINARY_CLOUD_NAME=dmcv5jxyt
 CLOUDINARY_API_KEY=324887396334648
 CLOUDINARY_API_SECRET=LrGYv34mDIjy3NuQT6WWIE3sxdg 
+EMAIL_USER=adityasingh092024@gmail.com
+EMAIL_PASS=dpzc bija qkel spqi
