--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGODB_URL=mongodb://localhost:27017/findr
-# MONGODB_URL=mongodb+srv://aditya2955singh:CCLW6AlusboeNYmv@findr.8oy7t6s.mongodb.net/?retryWrites=true&w=majority&appName=Findr
+# MONGODB_URL=mongodb://localhost:27017/findr
+MONGODB_URL=mongodb+srv://aditya2955singh:CCLW6AlusboeNYmv@findr.8oy7t6s.mongodb.net/?retryWrites=true&w=majority&appName=Findr
 PORT=4000
 JWT_SECRET= FindrJobPortal
 CLOUDINARY_CLOUD_NAME=dmcv5jxyt
