--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ JWT_SECRET= FindrJobPortal
 CLOUDINARY_CLOUD_NAME=dmcv5jxyt
 CLOUDINARY_API_KEY=324887396334648
 CLOUDINARY_API_SECRET=LrGYv34mDIjy3NuQT6WWIE3sxdg 
-EMAIL_USER=adityasingh092024@gmail.com
-EMAIL_PASS=dpzc bija qkel spqi
+EMAIL_USER=hr@findr.ae 
+EMAIL_PASS=Mohit@2570
