--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ CLOUDINARY_CLOUD_NAME=dmcv5jxyt
 CLOUDINARY_API_KEY=324887396334648
 CLOUDINARY_API_SECRET=LrGYv34mDIjy3NuQT6WWIE3sxdg 
 EMAIL_USER=hr@findr.ae 
-EMAIL_PASS=Mohit@2570
+EMAIL_PASS=HR257@2025
